iowa-b/nucleus-dev/nucleus-dev-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nucleus-dev
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
