iowa-b/nucleus-dev/argo-tunnel.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: argo-tunnel
  name: argo-tunnel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argo-tunnel
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: argo-tunnel
    spec:
      containers:
      - image: gcr.io/cloudflare-registry/argo-tunnel:0.6.5
        imagePullPolicy: Always
        name: argo-tunnel
        command: ["argot", "couple"]
        args:
        - --incluster
        - --ingress-class=argo-tunnel
        - --v=3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: argo-tunnel
      serviceAccountName: argo-tunnel
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: argo-tunnel
              topologyKey: kubernetes.io/hostname
