iowa-b/nucleus-dev/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nucleus-dev
    type: web
  name: nucleus-dev
  namespace: nucleus-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-dev
      type: web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nucleus-dev
        type: web
      name: nucleus-dev
      namespace: nucleus-dev
    spec:
      containers:
      - env:
        - name: ALLOWED_HOSTS
          value: "*"
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: database-url
              name: nucleus-dev-secrets
        - name: DEBUG
          value: "False"
        - name: DEIS_APP
          value: nucleus-dev
        - name: DISABLE_SSL
          value: "true"
        - name: HTTPS
          value: "on"
        - name: NEW_RELIC_APP_NAME
          value: nucleus-dev-iowa-b
        - name: NEW_RELIC_CONFIG_FILE
          value: /app/newrelic.ini
        - name: NEW_RELIC_LICENSE_KEY
          valueFrom:
            secretKeyRef:
              key: new-relic-license-key
              name: nucleus-dev-secrets
        - name: OIDC_ENABLE
          value: "True"
        - name: OIDC_OP_AUTHORIZATION_ENDPOINT
          value: https://auth.mozilla.auth0.com/authorize
        - name: OIDC_OP_TOKEN_ENDPOINT
          value: https://auth.mozilla.auth0.com/oauth/token
        - name: OIDC_OP_USER_ENDPOINT
          value: https://auth.mozilla.auth0.com/userinfo
        - name: OIDC_RP_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: oidc-rp-client-id
              name: nucleus-dev-secrets
        - name: OIDC_RP_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: oidc-rp-client-secret
              name: nucleus-dev-secrets
        - name: RNA_JSON_CACHE_TIME
          value: "120"
        - name: SAML_CREATE_USER
          value: "False"
        - name: SAML_ENABLE
          value: "True"
        - name: SAML_ENTITY_ID
          value: nucleus-dev.allizom.org/saml2/metadata/
        - name: SAML_REMOTE_METADATA
          value: stage.xml
        - name: SAML_SSO_URL
          value: https://nucleus-dev.allizom.org/saml2/acs/
        - name: SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: secret-key
              name: nucleus-dev-secrets
        image: mozmeao/nucleus:9d1f4b578180288cb41cebb0a5e12ad1825bad1e
        imagePullPolicy: Always
        name: nucleus-dev-web
        readinessProbe:
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          # may want to switch to http check against /healthz/ later
          tcpSocket:
            port: 8000
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - name: cloudflared
        image: mozmeao/nucleus:9d1f4b578180288cb41cebb0a5e12ad1825bad1e
        imagePullPolicy: Always
        command: ["cloudflared", "tunnel"]
        args:
        - --url=http://127.0.0.1:8000
        - --hostname=nucleus-dev.allizom.org
        - --loglevel=debug
        - --origincert=/etc/cloudflared/cert.pem
        - --proto-loglevel=warn
        - --no-autoupdate
        - --retries=8
        - --tag=app=nucleus-dev,src=k8s,name=$POD_NAME),namespace=$(POD_NAMESPACE),host=nucleus-dev.allizom.org
        resources:
          limits:
            cpu: 20m
            memory: 40Mi
          requests:
            cpu: 20m
            memory: 40Mi
        volumeMounts:
        - mountPath: /etc/cloudflared
          name: tunnel-secret
          readOnly: true
      terminationGracePeriodSeconds: 60
      volumes:
      - name: tunnel-secret
        secret:
          secretName: allizom.org
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
