iowa-b/nucleus-dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nucleus-dev
  name: nucleus-dev-lb
  namespace: nucleus-dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: nucleus-dev
    type: web
  sessionAffinity: None
  type: LoadBalancer
